--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "serve",
-    "build": "esbuild src/wb-marquee.ts src/wb-marquee.css --bundle --minify --sourcemap --outdir=dist"
+    "build": "esbuild src/wb-marquee.ts src/wb-marquee.css --bundle --minify --sourcemap --outdir=dist --out-extension:.js=.min.js --out-extension:.css=.min.css"
   },
   "repository": {
     "type": "git",
